--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,6 +29,28 @@
 			"sourceMaps": true,
 			// Redirect VS to find compiled code
 			"outDir": "${workspaceRoot}/obj"
-		}
+		},
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Run mocha - Current File",
+            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+            "args": [
+                "-u",
+                "tdd",
+                "--timeout",
+                "999999",
+                "--colors",
+                "--config",
+                "./mocharc.yml",
+                "${file}"
+            ],
+            "env": {
+            },
+            "internalConsoleOptions": "openOnSessionStart",
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
+        }
     ]
 }
