--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "@types/mocha": "^8.0.0",
         "@types/node": "*",
         "chai": "^4.3.4",
-        "mocha": "^8.3.2"
+        "mocha": "^8.3.2",
+        "ts-node": "10.8.0"
     }
 }
